fix nav on mobile

--- a/src/app/nav/nav.component.sass
+++ b/src/app/nav/nav.component.sass
@@ -19,8 +19,19 @@
     border-image-source: linear-gradient(to right, #31cf6e, #2bb9cd)
     border-image-slice: 1
 
-    
-
 .navbar-end 
     border:0px
+
+
+//Mobile 
+@media (max-width: 640px) 
+    #navbarMobile
+        margin-top: 1.5rem
+        margin-left: auto
+        margin-right: auto
+        width: 20rem
+
+    app-button
+        color: red
+        display: none
    
